[package]
name = "voronoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
vulkano-win = "0.34.0"
vulkano-macros = "0.34.0"
fastrand = "2.0.1"
png = "0.17.13"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3